# timeNot

./: Main.hs  README.md  timeNot.cabal
Sound/TimeNot/: AST.hs  InfinityFuncs.hs  MapEstuary.hs  Parsers.hs  REPL.hs  Render.hs  Tests.hs  Tests2.hs  ToEvents.hs  mapEstuary.hs
Sound/TimeNot/InitSuperCollider/: clockAndResponder.scd  drumKit.scd  fx_filters.scd  initTimeNot.scd  oscillators.scd
Sound/TimeNot/InitSuperCollider/wavetable/: WT11.aif  WT13.aif  WT15.aif  WT16.aif  WT17.aif  WT2.aif  WT20.aif  WT25.aif  WT26.aif  WT27.aif  WT28.aif  WT3.aif  WT30.aif  WT7.aif  WT8.aif  WT9.aif
Sound/TimeNot/TimeNotSCClass/TimeNot/: TimeNot.sc  TimeNotConnect.sc
sound/timeNot/: AST.hs  Parsers.hs  REPL.hs  ToEvents.hs  mapEstuary.hs
sound/timeNot/InitSuperCollider/: examples.scd
sound/timeNot/InitSuperCollider/wavetable/: WT0.aif  WT1.aif  WT10.aif  WT12.aif  WT14.aif  WT18.aif  WT19.aif  WT21.aif  WT22.aif  WT23.aif  WT24.aif  WT29.aif  WT31.aif  WT4.aif  WT5.aif  WT6.aif
sound/timeNot/TimeNotSCClass/TimeNot/: TimeNot.sc
