name:                timeNot
version:             0.0.0.1
synopsis:            Notation for a time-oriented live coding practice
description:         Please see README.md
homepage:            http://github.com/AFrancoB/timeNot
license:             GPL-3
license-file:        LICENSE
author:              Alejandro Franco Briones
maintainer:          francoba@mcmaster.ca
copyright:           2019 Alejandro Franco Briones
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

Library
  hs-source-dirs:    .
  Build-Depends:     base, parsec, parser-combinators, time, mtl, transformers, hosc, network, containers, text
  GHC-Options:       -Wall -fwarn-tabs -fno-warn-unused-do-bind
  Exposed-modules:   sound.timeNot.AST
                     sound.timeNot.REPL
                     sound.timeNot.Parsers
                     sound.timeNot.mapEstuary
  other-modules:     sound.timeNot.ToEvent
  default-language:  Haskell2010

executable timeNot
  hs-source-dirs:    .
  main-is:           Main.hs
  build-depends:     base, parsec, parser-combinators, time, mtl, transformers, hosc, network, containers, text
  default-language:  Haskell2010