name:                TimeNot
version:             0.0.0.1
synopsis:            Notation for a time-oriented live coding practice
description:         Please see README.md
homepage:            http://github.com/AFrancoB/timeNot
license:             GPL-3
license-file:        LICENSE
author:              Alejandro Franco Briones
maintainer:          francoba@mcmaster.ca
copyright:           2019 Alejandro Franco Briones
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

Library
  hs-source-dirs:    .
  Build-Depends:     base, parsec, time, hmt, mtl, hosc, network, containers, text, lens
  GHC-Options:       -Wall -fwarn-tabs -fno-warn-unused-do-bind
  Exposed-modules:   Sound.TimeNot.AST
                     Sound.TimeNot.REPL
                     Sound.TimeNot.Parsers
                     Sound.TimeNot.MapEstuary
                     Sound.TimeNot.ToEvents
  --other-modules:     
  default-language:  Haskell2010

executable timeNot
  hs-source-dirs:    .
  main-is:           Main.hs
  build-depends:     base, parsec, time, hmt, mtl, hosc, network, containers, text, lens
  default-language:  Haskell2010